# RavenVLM-Dino-Gemma

./: .gitignore  .modalignore  README.md  coco_vision_encoding.py  inference.py  pyproject.toml  standalone-gemma3-plus-kvcache.ipynb  train-qformer-short.py  train-qformer.py  train.py
configs/: config.yaml
configs/data/: default.yaml
configs/env/: default.yaml
configs/logger/: wandb.yaml
configs/model/: default.yaml
configs/optimizer/: adamw.yaml
configs/trainer/: default.yaml
data/: COCOCaptions.py  COCOCaptions_raw.py  __init__.py
models/: adapters.py  config.py  dino_model_paths.py  language_model.py  qformer.py  qformer_losses.py  vision_encoder.py  vision_language_model.py
notebooks/: Experiment_2.ipynb  check0.ipynb  check0Other.ipynb  check1.ipynb
scripts/: coco_vision_encoding.py  coco_vision_encoding_diff_size.py  combine_shards_modal.py  inspect_shards.py  modal_train.py  sanity_train_20steps.ipynb  wandb_run_details.py
src/: __init__.py
src/data/: __init__.py  dataloader.py
src/engine/: __init__.py  train.py
src/models/: __init__.py  caption_modelling.py
src/utils/: __init__.py  training.py
tests/: captioner_diagnostics.ipynb  conftest.py  dataset_test.py  modal_dataset_tests.py  model-download.py  model-download_and_generate.py  test_caption_modelling.py  test_dataloader.py  test_qformer.py  test_training.py  test_vlm_qformer.py  vit_load_and_check.py  vit_prop.py
