[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "huggingface-hub[cli]>=0.34.4",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
    "trl>=0.22.2",
]
