[project]
name = "raven-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "modal>=1.1.4",
    "pycocoevalcap>=1.2",
    "pycocotools>=2.0.10",
    "pytest>=9.0.1",
    "pytorch-lightning>=2.5.5",
    "safetensors>=0.6.2",
    "termcolor>=3.2.0",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "wandb>=0.22.0",
]
